[package]
name = "revealpack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arx = "0.1.0"
clap = { version = "4.1.4", features = ["derive"] }
jbk-jim = { path = "../jim" }
jubako = "0.1.0"
mime_guess = "2.0.4"


[profile.release]
#debug = 1
lto = true
