[package]
name = "revealpack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arx = { git = "https://framagit.org/jubako/arx.git" }
clap = { version = "4.1.4", features = ["derive"] }
jbk-jim = { git = "https://framagit.org/jubako/jim.git" }
jubako = { git = "https://framagit.org/jubako/jubako.git" }
mime_guess = "2.0.4"


[profile.release]
#debug = 1
lto = true
