[package]
name = "prezpack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arx = { git = "https://framagit.org/jubako/arx.git", package="libarx" }
clap = { version = "4.1.4", features = ["derive"] }
waj = { git = "https://framagit.org/jubako/waj.git", package="libwaj" }
jubako = { git = "https://framagit.org/jubako/jubako.git" }
mime_guess = "2.0.4"
tempfile = "3.6.0"
walkdir = "2.3.3"
indicatif = "0.17.5"


[profile.release]
#debug = 1
lto = true
